add seo elements

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,39 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Crypto Analytics</title>
+
+    <!-- Primary Meta Tags -->
+    <title>CryptoQuantLab - Real-Time Cryptocurrency Analytics & Market Data</title>
+    <meta name="title" content="CryptoQuantLab - Real-Time Cryptocurrency Analytics & Market Data" />
+    <meta name="description" content="Track live cryptocurrency prices, market caps, and trading volumes. Analyze Bitcoin, Ethereum, and 50+ cryptocurrencies with interactive charts and real-time data." />
+    <meta name="keywords" content="cryptocurrency, crypto, bitcoin, ethereum, BTC, ETH, crypto analytics, cryptocurrency prices, market cap, trading volume, crypto charts, blockchain, digital currency, crypto market data" />
+    <meta name="author" content="CryptoQuantLab" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://cryptoquantlab.com/" />
+    <meta property="og:title" content="CryptoQuantLab - Real-Time Cryptocurrency Analytics" />
+    <meta property="og:description" content="Track live cryptocurrency prices, market caps, and trading volumes. Analyze Bitcoin, Ethereum, and 50+ cryptocurrencies with interactive charts." />
+    <meta property="og:image" content="https://cryptoquantlab.com/og-image.jpg" />
+    <meta property="og:site_name" content="CryptoQuantLab" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://cryptoquantlab.com/" />
+    <meta property="twitter:title" content="CryptoQuantLab - Real-Time Cryptocurrency Analytics" />
+    <meta property="twitter:description" content="Track live cryptocurrency prices, market caps, and trading volumes. Analyze Bitcoin, Ethereum, and 50+ cryptocurrencies." />
+    <meta property="twitter:image" content="https://cryptoquantlab.com/og-image.jpg" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://cryptoquantlab.com/" />
+
+    <!-- Additional SEO -->
+    <meta name="theme-color" content="#3b82f6" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
   </head>
   <body>
     <div id="root"></div>
